examples/invalid/undefined_in_envs_b.reqlang
```%config
vars = ["foo"]

[envs]
```


```%request
GET https://example.com/{{:foo}} HTTP/1.1

```
